@@ -14,6 +14,7 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 
+import org.dellroad.stuff.java.ErrorAction;
 import org.springframework.beans.factory.annotation.Autowire;
 
 /**
@@ -27,10 +28,20 @@ import org.springframework.beans.factory.annotation.Autowire;
  * </p>
  *
  * <p>
- * Running the AspectJ compiler on your annotated classes is required to activate this annotation.
+ * For an extra safety check, consider setting {@link #ifSessionNotLocked} where appropriate.
+ * </p>
+ *
+ * <p>
+ * For the this annotation to function properly, {@link VaadinConfigurable @VaadinConfigurable} classes must be woven
+ * (either at build time or runtime) using the
+ * <a href="http://www.eclipse.org/aspectj/doc/released/faq.php#compiler">AspectJ compiler</a> with the
+ * {@code VaadinConfigurableAspect} aspect (included in the <code>dellroad-stuff</code> JAR file), and the
+ * {@link SpringContextApplication} must be used.
  * </p>
  *
  * @see org.dellroad.stuff.vaadin
+ * @see SpringContextApplication
+ * @see <a href="https://github.com/archiecobbs/dellroad-stuff-vaadin-spring-demo3">Example Code on GitHub</a>
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target(ElementType.TYPE)
@@ -57,5 +68,12 @@ public @interface VaadinConfigurable {
      * Whether to inject dependencies prior to constructor execution.
      */
     boolean preConstruction() default false;
+
+    /**
+     * What to do when we discover that the {@link com.vaadin.Application} is not locked when the annotated bean is constructed.
+     * For beans that are (or will interact with) Vaadin widgets, containers, etc., this typically
+     * indicates a programming error. In such cases, this property configures what to do, if anything.
+     */
+    ErrorAction ifApplicationNotLocked() default ErrorAction.IGNORE;
 }
 
